revise up to lesson 6

--- a/app/views/ideator_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_12.html.erb
@@ -100,7 +100,7 @@ end
   The first thing it tells us to do is to add the gem to your Gemfile. So in your Gemfile, add this line:
 </p>
 
-<pre><code>
+<pre><code class="bash">
 gem 'simple_form'
 </code></pre>
 
@@ -108,7 +108,7 @@ gem 'simple_form'
   Then run the following command to install it:
 </p>
 
-<pre><code>
+<pre><code class="bash">
 bundle install
 </code></pre>
 
@@ -116,7 +116,7 @@ bundle install
   For the last step, we are going to run the generator that integrates simple form with bootstrap. So let's run this command.
 </p>
 
-<pre><code>
+<pre><code class="bash">
 rails generate simple_form:install --bootstrap
 </code></pre>
 
