--- a/app/views/ideator_lessons/lessons/lesson_20.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_20.html.erb
@@ -16,7 +16,7 @@
   The first thing they tell us to do is to add this line in the Gemfile:
 </p>
 
-<pre><code>gem 'will_paginate', '~> 3.0.6'</code></pre>
+<pre><code class="bash">gem 'will_paginate', '~> 3.0.6'</code></pre>
 
 <p>
   Let's go ahead and add that into your Gemfile, then run <code>bundle install</code> to install it. After we do that, what should we do?
