--- a/app/views/ideator_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_3.html.erb
@@ -15,15 +15,15 @@
 <%= image_tag 'ideator_wireframes.jpg', class: 'screenshot' %>
 
 <p>
-	As you can see, the wireframes are pretty rough...but it gets the job done! The key is to visualize what features you want on your web application so that it's easier to think through how to build your web application.
+	As you can see, the wireframes don't have to be perfect, it just needs to get the job done! The key here is to visualize what features you want on your web application so that it's easier to think through how to build your web application.
 </p>
 
 <p>
-	Along with these mock ups, I’m going to specify what kind of data I want to store in my database.
+	Along with these mock ups, let's specify what kind of data we want to store in my database.
 </p>
 
 <p>
-	This is something you won’t understand right now, but try to understand the gist of it. So in our app, we want the <strong>ability to post ideas</strong>. To save those ideas into the app, <strong>we need to store the information in a database</strong>.
+	In our app, we want the <strong>ability to post ideas</strong>. To save those ideas into the app, <strong>we need to store the ideas in a database</strong>.
 </p>
 
 <p>
@@ -33,6 +33,10 @@
 <p>
 	So each idea will have two pieces of information attached to it, a <code>description</code> and an <code>author</code>. 
 </p>
+
+<!-- <p>
+  Think of this as if you were to save information into an excel file. You would have columns in the excel file for each piece of information you want to store.
+</p> -->
 
 <p>
 	Drawing this out will become useful later on. Let’s just keep this in mind for now and move on.
