--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -8,7 +8,7 @@
 	You can see all the files that rails generated for us. Now we’re going to generate some more. Let’s hop into our terminal and type in this command:
 </p>
 
-<pre><code>
+<pre><code class="bash">
 rails generate controller ideas
 </code></pre>
 
@@ -17,7 +17,7 @@ rails generate controller ideas
 </p>
 
 <p>
-	Now let’s go into Sublime and open up ideas_controller (remember the little trick? Command + P).
+	Now let’s go into Sublime and open up <code>ideas_controller.rb</code> (remember the little trick? Command + P).
 </p>
 
 <p>
@@ -89,19 +89,19 @@ end
 
 <p>We’re first going to add all the files that we just updated:</p>
 
-<pre><code>
+<pre><code class="bash">
 git add .
 </code></pre>
 
 <p>Then we’re going to add a commit message describing what we just updated:</p>
 
-<pre><code>
+<pre><code class="bash">
 git commit -am “Add ideas controller and set ideas#index as root”
 </code></pre>
 
 <p>And finally, push up to GitHub.</p>
 
-<pre><code>
+<pre><code class="bash">
 git push origin master
 </code></pre>
 
