--- a/app/views/ideator_lessons/lessons/lesson_6.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_6.html.erb
@@ -1,11 +1,11 @@
 <h1><%= title_for(IdeatorLesson, 3, 2) %></h1>
 
 <p>
-	This is going to be your first self directed lesson. The purpose of these lessons is so that you actually start learning how to implement things on your own based on what you’ve learned throughout these lessons.
+	This is going to be your first self directed lesson. <strong>The purpose of these lessons is so that you actually start learning how to implement things on your own based on what you’ve learned throughout these lessons.</strong>
 </p>
 
 <p>
-	In this self directed lesson, the goal is to implement a navbar using bootstrap according to our wireframe that we drew up before.
+	In this self directed lesson, <strong>the goal is to implement a navbar using bootstrap</strong> according to our wireframe that we drew up before.
 </p>
 
 <p>
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-	If you need a hint, refer to <a href="/html_css/7" target="_blank">this lesson</a>.
+	If you need a hint, refer to <a href="/html_css/7" target="_blank">Lesson 7 of the HTML/CSS course</a>.
 </p>
 
 <p>
