--- a/app/views/ideator_lessons/lessons/lesson_7.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_7.html.erb
@@ -103,7 +103,7 @@
   Let’s now commit this to GitHub so we don’t lose any of the changes. From now on, we'll call this the <strong>standard git workflow</strong>.
 </p>
 
-<pre><code>
+<pre><code class="bash">
 git add .
 git commit -am “Style navbar”
 git push origin master
