--- a/app/views/ideator_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_9.html.erb
@@ -12,7 +12,7 @@
   We can create models by running this command:
 </p>
 
-<pre><code>
+<pre><code class="bash">
 rails generate model ModelName
 </code></pre>
 
@@ -20,7 +20,7 @@ rails generate model ModelName
   In our case, let's name our model Idea. Let's go ahead and create the Idea model:
 </p>
 
-<pre><code>
+<pre><code class="bash">
 rails generate model Idea
 </code></pre>
 
@@ -50,7 +50,7 @@ rails generate model Idea
   Now that we have edited our migration file, we have to tell rails to migrate these columns. Run the following command:
 </p>
 
-<pre><code>
+<pre><code class="bash">
 rake db:migrate
 </code></pre>
 
