--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header>
+<header style="height:100vh;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -42,7 +42,7 @@
   <a class = "anchor" id = "skills_you_will_learn"></a>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12 text-center skills_header">
                 <h2>Skills You Will Learn</h2>
                 <hr class="star-primary">
             </div>
@@ -158,7 +158,7 @@
                 <hr class="star-light">
             </div>
         </div>
-        <div class="row">
+        <div class="row about_text">
             <div class="col-lg-4 col-lg-offset-2">
               <h3 style = "color:yellow;">Have no prior coding experience? You can still learn how to build web applications with Ruby on Rails in just 3 months</h3>
               <p>
