--- a/app/views/layouts/landing_page.html.erb
+++ b/app/views/layouts/landing_page.html.erb
@@ -32,5 +32,18 @@
 
 <%= render '/layouts/footer' %>
 
+<script src="https://cdn.jsdelivr.net/scrollreveal.js/3.0.9/scrollreveal.min.js"></script>
+
+<script>
+window.sr = ScrollReveal({ reset: true, duration: 1000 });
+sr.reveal('.name');
+sr.reveal('.skills');
+sr.reveal('.join-buttons');
+sr.reveal('.skills_header');
+sr.reveal('.portfolio_items');
+sr.reveal('.text-center');
+sr.reveal('.about_text');
+</script>
+
 </body>
 </html>
