--- a/app/views/ideator_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_8.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-  If we run a google search for "bootstrap sticky footer", we can find a StackOverflow post that talks this issue <a href = "http://stackoverflow.com/a/19758234/5456016" target = "_blank">here</a>. What we're going to do is use information contained in this post, use the solutions, and make it look nice. Let's copy the code below into our <code>application.scss</code> (Note that the footer height is changed to be 120px instead of 60px as it is shown in the StackOverflow post).
+  If we run a google search for "bootstrap sticky footer", we can find a StackOverflow post that talks this issue <a href = "http://stackoverflow.com/a/19758234/5456016" target = "_blank">here</a>. What we're going to do is use information contained in this post, use the solutions, and make it look nice. Let's copy the code below into our <code>application.scss</code> (Note that the footer height is changed to be <code>120px</code> instead of <code>60px</code> as it is shown in the StackOverflow post).
 </p>
 
 <pre><code class="css">
@@ -160,7 +160,7 @@ body {
 
   <h4>Some Hints :)</h4>
 
-  <ul class="unindented_ul">
+  <ul>
     <li>Make sure to add in the Font Awesome CDN in the <code>&lt;head&gt;</code> section of your <code>application.html.erb</code></li>
     <li>You can browse for icons <a href="https://fortawesome.github.io/Font-Awesome/icons/" target="_blanK">here</a></li>
     <li>You can change the size of these icons by changing the font size of the icons</li>
