add meta description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
 
   <title>Techrise - Learn to Code</title>
 
+  <meta name="description" content="Learn how to code with interactive lessons and personal mentors at TECHRISE. Learn how to create web applications with HTML/CSS, Ruby on Rails, JavaScript, and other essential skills for all aspiring web developers and entrepreneurs.">
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
