--- a/app/views/ideator_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_9.html.erb
@@ -28,11 +28,11 @@ rails generate model Idea
   <h3>Naming Conventions</h3>
 
   <p>
-    In general, the convention for naming <strong>models</strong> is to use the singular form. For example, instead of <strong>Ideas</strong>, we want to name the model <strong>Idea</strong>.
+    In general, the convention for naming <strong>models</strong> is to use the <strong>singular form</strong>. For example, instead of <strong>Ideas</strong>, we want to name the model <strong>Idea</strong>.
   </p>
 
   <p>
-    On the other hand, the convention for <strong>controllers</strong> is to use the plural form for controller names. For example, instead of naming the controller <code>idea</code>, we want to name it <code>ideas</code>.
+    On the other hand, the convention for <strong>controllers</strong> is to use the plural form for controller names. For example, instead of naming the controller <strong>idea</strong>, we want to name it <strong>ideas</strong>.
   </p>
 
 </div>
@@ -50,7 +50,7 @@ rails generate model Idea
 </p>
 
 <p>
-  In order to tell rails to create columns in the database for storing the <code>author</code> and <code>description</code> of the ideas, we have to tell it what kind of data they are going to be. <strong>Is the database column going to store numbers? Text? Booleans? We need to specify this when we create our migration files.</strong> Here we are going to tell rails that the <code>description</code> column should be the <code>text</code> datatype, and the <code>author</code> column is going to be a <code>string</code></strong>. We can add this by making the migration file look like the following. Go into Sublime and hit <code>Command + P</code> and type in "create ideas" and it should find your migration file that looks like <code>xxxxxxxxx_create_ideas.rb</code>. Open the file that looks like <code>xxxxxxxxx_create_ideas.rb</code> and make it look exactly like below.
+  In order to tell rails to create columns in the database for storing the <code>author</code> and <code>description</code> of the ideas, we have to tell it what kind of data they are going to be. <strong>Is the database column going to store numbers? Text? Booleans? We need to specify this when we create our migration files.</strong> Here we are going to tell rails that the <code>description</code> column is going to be the data type of <code>text</code>, and the <code>author</code> column is going to be the data type of <code>string</code></strong>. Go into Sublime and hit <code>Command + P</code> and type in "create ideas" and it should find your migration file that looks like <code>xxxxxxxxx_create_ideas.rb</code>. Open the file that looks like <code>xxxxxxxxx_create_ideas.rb</code>. We can specify the database columns like we talked about above by making the migration file look like the following.
 </p>
 
 <pre><code class="ruby">
