--- a/app/views/layouts/landing_page.html.erb
+++ b/app/views/layouts/landing_page.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Techrise - Learn to Code</title>
+  <title>Techrise Nepal - Learn to Code</title>
 
   <meta name="description" content="Learn how to code with interactive lessons and personal mentors at TECHRISE. Learn how to create web applications with HTML/CSS, Ruby on Rails, JavaScript, and other essential skills for all aspiring web developers and entrepreneurs.">
 
